--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -11,3 +11,14 @@
     right: 0;
   }
 }
+
+header {
+  background-image: linear-gradient(
+    to left,
+    #ffffff,
+    #cfd1de,
+    #9ca6be,
+    #637e9f,
+    #165a7f
+  );
+}
