--- a/src/components/sidebar/styles.scss
+++ b/src/components/sidebar/styles.scss
@@ -18,6 +18,30 @@
     }
   }
 
+  .action-group {
+    display: flex;
+    justify-content: center;
+
+    & button {
+      border: 0;
+      border-radius: 50%;
+      font-size: 1.5rem;
+      margin-left: 1rem;
+      border-right-color: unset;
+      width: 75px;
+      height: 75px;
+      box-shadow: 0px 2px 2px -1px rgba(0, 0, 0, 0.2),
+        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    }
+  }
+
+  & .start-game {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 85vh;
+  }
+
   & .active-room {
     background-color: #13599f;
     color: white;
